--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.7.1",
     "expo": "~50.0.14",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.10.3",
